Applied test results